src/parser/tests/snapshots/rusty__parser__tests__control_parser_tests__while_with_body_statement.snap
---
source: src/parser/tests/control_parser_tests.rs
expression: statement
---
WhileLoopStatement {
    condition: LiteralBool {
        value: true,
    },
    body: [
        ReferenceExpr {
            kind: Member(
                Reference {
                    name: "x",
                },
            ),
            base: None,
        },
        ReferenceExpr {
            kind: Member(
                Reference {
                    name: "y",
                },
            ),
            base: None,
        },
    ],
}
