src/parser/tests/snapshots/rusty__parser__tests__control_parser_tests__while_with_expression.snap
---
source: src/parser/tests/control_parser_tests.rs
expression: statement
---
WhileLoopStatement {
    condition: BinaryExpression {
        operator: Less,
        left: ReferenceExpr {
            kind: Member(
                Reference {
                    name: "x",
                },
            ),
            base: None,
        },
        right: LiteralInteger {
            value: 7,
        },
    },
    body: [],
}
